# librarium

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  justfile  test-assets.toml
.github/workflows/: binaries.yml  coverage.yml  main.yml  msrv.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs  no_alloc_imports.rs  with_alloc_imports.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bytes.rs
librarium/: Cargo.toml
librarium-cli/: Cargo.toml
librarium/src/: cpio_header.rs  error.rs  lib.rs  newc.rs  odc.rs  read_seek.rs
librarium/tests/: test.rs
src/: lib.rs  main.rs
test_cpio/: sample.cpio
tests/: test.rs
