[workspace]
members = [
    "librarium",
    "librarium-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "deku", "cpio", "linux", "archive"]
categories = ["filesystem", "parsing"]
repository = "https://github.com/wcampbell0x2a/librarium"

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
