[package]
name = "librarium-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.15.0", package = "libafl_libfuzzer" }

[dependencies.librarium]
path = "../librarium"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "bytes"
path = "fuzz_targets/bytes.rs"
test = false
doc = false
