[package]
name = "librarium-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Library for the reading, creating, and modification of cpio file systems"
rust-version = "1.72.1"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "uncpio-librarium"
path = "src/bin/uncpio.rs"
bench = false

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.5"
librarium = { path = "../librarium", version = "0.3.1" }
log = "0.4.22"
