[package]
name = "librarium"
description = "Library for the reading, creating, and modification of cpio file systems"
rust-version = "1.72.1"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["deku/std", "alloc"]
alloc = ["deku/alloc"]

[dependencies]
deku = { version = "0.18.1", features = ["std", "logging"], default-features = false }
log = "0.4.22"
num = "0.4.3"
num-traits = "0.2.19"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.9.0"
test-assets-ureq = "0.3.0"
test-log = "0.2.16"
