[package]
name = "librarium"
description = "Library for the reading, creating, and modification of cpio file systems"
rust-version = "1.85"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
## Enable `std` support
std = ["deku/std", "no_std_io2/std", "alloc"]
## Enable `alloc` support
alloc = ["deku/alloc", "no_std_io2/alloc"]

[dependencies]
deku = { version = "0.20.2", default-features = false }
log = "0.4.22"
no_std_io2 = { version = "0.9.1", default-features = false }
num = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
thiserror = { version = "2.0.0", default-features = false }
document-features = { version = "0.2.10", optional = true }

[dev-dependencies]
tempfile = "3.9.0"
test-assets-ureq = "0.6.0"
test-log = "0.2.16"
toml = "0.8"
